# order_book

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: wheels.yml
bindings/python/: order_book_bindings.cpp
config/: CMakeLists.txt
cpp/benchmarks/: bench_order_book.cpp
cpp/include/order_book/book/: array_price_level.hpp  linked_list_price_level.hpp  order_book_interface.hpp  price_level_interface.hpp  tree_order_book.hpp  vector_order_book.hpp
cpp/include/order_book/core/: event.hpp  order.hpp  price_utils.hpp
cpp/include/order_book/engine/: simulation_config.hpp  simulation_engine.hpp
cpp/include/order_book/matching/: fifo_matcher.hpp  matching_algorithm.hpp  pro_rata_matcher.hpp
cpp/include/order_book/orders/: order_validators.hpp  stop_order_manager.hpp
cpp/include/order_book/sources/: historical_replayer.hpp  interactive_source.hpp  order_source.hpp  strategy_source.hpp
cpp/src/book/: array_price_level.cpp  linked_list_price_level.cpp  tree_order_book.cpp  vector_order_book.cpp
cpp/src/engine/: simulation_engine.cpp
cpp/src/matching/: fifo_matcher.cpp
cpp/src/orders/: order_validators.cpp  stop_order_manager.cpp
cpp/src/sources/: historical_replayer.cpp  interactive_source.cpp  strategy_source.cpp
cpp/tests/book/: test_tree_order_book.cpp
cpp/tests/sources/: test_historical_replayer.cpp
docs/: bench_raw.json
docs/bench_figures/: stats_table.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
python/: order_book_demo.ipynb
python/backend/app/: __init__.py  main.py  models.py  services.py
python/backend/tests/: test_services.py
python/order_book/: __init__.py  __init__.pyi  _order_book.pyi
python/order_book/features/: __init__.py  microstructure.py
scripts/: plot_benchmarks.py
tests/: test_bindings.py  test_microstructure.py
